--- a/React-dalis/src/BankApp.scss
+++ b/React-dalis/src/BankApp.scss
@@ -140,21 +140,60 @@ header img {
   gap: 10px;
 }
 
-.cookie-manager {
+.login-manager {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.cookie-card {
-  margin-top: 20px;
-  width: 300px;
-  background-color: white;
+.login-card {
+  margin-top: 50px;
+  width: 400px;
+  height: 400px;
+  background-color: #7ebdc2;
   color: #1c3041;
-  border-radius: 10px;
-  border: 1px solid #1c3041;
+  border-radius: 20px;
+  border: 3px solid #fff;
   font-weight: bold;
+}
+
+.login-card-header {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+  font-size: 30px;
+}
+
+.login-body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.login-name {
+  display: flex;
+  justify-content: center;
+  font-size: 25px;
+}
+
+.login-credentials {
+  display: flex;
+  justify-content: left;
+  gap: 25px;
+  margin-bottom: 20px;
+}
+
+.login-label {
+  margin-left: 65px;
+}
+
+.name-input {
+  margin-left: 25px;
+}
+
+.login-manager .login-card .login-body button {
+  margin: 20px 80px 0px 80px;
 }
 
 .navbar {
@@ -188,4 +227,33 @@ ul {
 
 .nav-link.active {
   color: #7ebdc2;
+}
+
+.nav-user {
+  margin-right: 20px;
+}
+
+.home-page {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.home-tree {
+  height: 500px;
+  width: 600px;
+}
+
+.home-title {
+  color: #7ebdc2;
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.home-text {
+  color: #7ebdc2;
+  width: 900px;
+  text-align: justify;
+  margin-bottom: 15px;
 }
